--- a/TP5_GRUPO_1/TP5_GRUPO_1.csproj
+++ b/TP5_GRUPO_1/TP5_GRUPO_1.csproj
@@ -68,20 +68,19 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Web.config" />
-    <Content Include="AgregarSucursal.aspx" />
+    <Content Include="Agregar.aspx" />
     <Content Include="listar.aspx" />
     <Content Include="Eliminar.aspx" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Conexion.cs" />
     <Compile Include="SucursalesBD.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="AgregarSucursal.aspx.cs">
-      <DependentUpon>AgregarSucursal.aspx</DependentUpon>
+    <Compile Include="Agregar.aspx.cs">
+      <DependentUpon>Agregar.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="AgregarSucursal.aspx.designer.cs">
-      <DependentUpon>AgregarSucursal.aspx</DependentUpon>
+    <Compile Include="Agregar.aspx.designer.cs">
+      <DependentUpon>Agregar.aspx</DependentUpon>
     </Compile>
     <Compile Include="listar.aspx.cs">
       <DependentUpon>listar.aspx</DependentUpon>
