--- a/TP5_GRUPO_1/TP5_GRUPO_1.csproj
+++ b/TP5_GRUPO_1/TP5_GRUPO_1.csproj
@@ -68,33 +68,33 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Web.config" />
-    <Content Include="Agregar.aspx" />
-    <Content Include="listar.aspx" />
-    <Content Include="Eliminar.aspx" />
+    <Content Include="AgregarSucursal.aspx" />
+    <Content Include="ListarSucursales.aspx" />
+    <Content Include="EliminarSucursal.aspx" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="SucursalesBD.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Agregar.aspx.cs">
-      <DependentUpon>Agregar.aspx</DependentUpon>
+    <Compile Include="AgregarSucursal.aspx.cs">
+      <DependentUpon>AgregarSucursal.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="Agregar.aspx.designer.cs">
-      <DependentUpon>Agregar.aspx</DependentUpon>
+    <Compile Include="AgregarSucursal.aspx.designer.cs">
+      <DependentUpon>AgregarSucursal.aspx</DependentUpon>
     </Compile>
-    <Compile Include="listar.aspx.cs">
-      <DependentUpon>listar.aspx</DependentUpon>
+    <Compile Include="ListarSucursales.aspx.cs">
+      <DependentUpon>ListarSucursales.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="listar.aspx.designer.cs">
-      <DependentUpon>listar.aspx</DependentUpon>
+    <Compile Include="ListarSucursales.aspx.designer.cs">
+      <DependentUpon>ListarSucursales.aspx</DependentUpon>
     </Compile>
-    <Compile Include="Eliminar.aspx.cs">
-      <DependentUpon>Eliminar.aspx</DependentUpon>
+    <Compile Include="EliminarSucursal.aspx.cs">
+      <DependentUpon>EliminarSucursal.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="Eliminar.aspx.designer.cs">
-      <DependentUpon>Eliminar.aspx</DependentUpon>
+    <Compile Include="EliminarSucursal.aspx.designer.cs">
+      <DependentUpon>EliminarSucursal.aspx</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
